apps/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alkfet-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: alkfet.local
      http:
        paths:
          # -------- FRONTEND --------
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          # -------- MCP SERVER / API --------
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mcpserver-service
                port:
                  number: 80

#apply (-> readmebe)
# kubectl apply -f k8s/ingress.yaml
# kubectl get ingress
# kubectl describe ingress alkfet-ingress
